# MagnumRenderer

./: .gitmodules  CMakeLists.txt  README.md
include/MagnumRender/: MagnumConvertUtils.h  RenderUnit.h
src/: main.cpp
src/MagnumRender/: RendererImpl.cpp  RendererImpl.h
